# book-store-spanner-db

./: .gitignore  README.md  TODO.md  book-store-spanner-db.cabal  flake.nix
src/: Main.hs  Reader.hs
src/Models/: Book.hs
src/Repository/: BookRepository.hs
src/Routes/: Handler.hs  Types.hs
src/Storage/Queries/: Book.hs  DBQueries.hs
src/Storage/Types/: Book.hs  DB.hs
