cabal-version:       2.4
name:                book-store-spanner-db
version:             0.1.0.0
author:              Abhishek Singh
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/book-store-spanner-db

executable            book-store-spanner-db-exe
  main-is:            Main.hs
  other-modules:      Reader
               ,      Routes.Handler
               ,      Routes.Types
               ,      Storage.Queries.Book
               ,      Storage.Queries.DBQueries
               ,      Storage.Types.Book
               ,      Storage.Types.DB
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions: StandaloneDeriving
                    , TypeFamilies
                    , TypeSynonymInstances
                    , DeriveGeneric
                    , FlexibleInstances
                    , FlexibleContexts
                    , DeriveAnyClass
                    , MultiParamTypeClasses
                    , RecordWildCards
                    , OverloadedStrings
                    , AllowAmbiguousTypes
                    , RankNTypes
                    , DerivingStrategies
                    , GeneralizedNewtypeDeriving
  build-depends:      aeson
               ,      base
               ,      http-client
               ,      http-types
               ,      markdown-unlit
               ,      servant
               ,      servant-client
               ,      servant-server
               ,      sqlite-simple
               ,      text
               ,      transformers
               ,      uuid
               ,      wai
               ,      warp
               ,      beam-core
               ,      postgresql-simple
               ,      beam-postgres
               ,      bytestring
               ,      exceptions
               ,      mtl
               ,      gogol
               ,      gogol-spanner
               ,      resourcet
  default-language:   Haskell2010
